--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,7 @@ matrix:
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5', 'libc6']
+            packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      - os: linux
        compiler: clang
        env: NODE_VERSION="6" ELECTRON_VERSION="2.0.1"
