--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "sqlite3",
+  "name": "sqlite3-extended",
   "description": "Asynchronous, non-blocking SQLite3 bindings",
   "version": "4.0.2",
-  "homepage": "http://github.com/mapbox/node-sqlite3",
+  "homepage": "http://github.com/lailune/node-sqlite3",
   "author": {
-    "name": "MapBox",
-    "url": "https://mapbox.com/"
-  },
-  "binary": {
-    "module_name": "node_sqlite3",
-    "module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
-    "host": "https://mapbox-node-binary.s3.amazonaws.comaa",
-    "remote_path": "./{name}/v{version}/{toolset}/",
-    "package_name": "{node_abi}-{platform}-{arch}.tar.gz"
+    "name": "Lailune"
   },
   "contributors": [
     "Konstantin Käfer <mail@kkaefer.com>",
@@ -48,7 +40,7 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "install": "node-pre-gyp install --fallback-to-build",
+    "install": "node-gyp install --fallback-to-build",
     "pretest": "node test/support/createdb.js",
     "test": "mocha -R spec --timeout 480000"
   },
