--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,10 @@ environment:
       platform: x64
     - nodejs_version: 10
       platform: x86
+    - nodejs_version: 11
+      platform: x64
+    - nodejs_version: 11
+      platform: x86
     # electron
     - nodejs_version: 10
       platform: x64
