--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ matrix:
      # electron Linux
      - os: linux
        compiler: clang
-       env: NODE_VERSION="6" ELECTRON_VERSION="3.0.0-beta.1"
+       env: NODE_VERSION="6" ELECTRON_VERSION="3.0.6"
        dist: trusty # needed for libc6 / 'version `GLIBC_2.17` not found' error on precise
        addons:
          apt:
@@ -143,6 +143,9 @@ matrix:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5']
      # electron MacOs
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="3.0.6"
      - os: osx
        compiler: clang
        env: NODE_VERSION="6" ELECTRON_VERSION="2.0.1"
