--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,16 @@ environment:
     - nodejs_version: 10
       platform: x64
       NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 4.0.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 10
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 4.0.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 10
+      platform: x64
+      NODE_RUNTIME: electron
       NODE_RUNTIME_VERSION: 3.0.6
       TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
     - nodejs_version: 10
