--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "nan": "~2.10.0",
+    "nan": "^2.12.1",
     "node-pre-gyp": "^0.11.0",
     "request": "^2.87.0"
   },
