--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
   include:
      # Linux
      - os: linux
+       dist: xenial
        compiler: clang
        env: NODE_VERSION="12"
        addons:
