--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,16 @@ environment:
     - nodejs_version: 12
       platform: x86
     # electron
+    - nodejs_version: 12
+      platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 5.0.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 12
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 5.0.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
     - nodejs_version: 10
       platform: x64
       NODE_RUNTIME: electron
