--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
   include:
      # Linux
      - os: linux
-       dist: xenial
+       dist: trusty
        compiler: clang
        env: NODE_VERSION="12"
        addons:
