--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
     "remote_path": "./{name}/v{version}/{toolset}/",
     "package_name": "{node_abi}-{platform}-{arch}.tar.gz"
   },
+  "build": {
+    "files": [
+      "package.json",
+      "lib/**/*",
+      "node_modules/**/*",
+      "sqlite3.js",
+      "LICENSE"
+    ]
+  },
   "contributors": [
     "Konstantin Käfer <mail@kkaefer.com>",
     "Dane Springmeyer <dane@mapbox.com>",
