--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "nan": "^2.12.1",
+    "node-addon-api": "2.0.0",
     "node-pre-gyp": "^0.11.0"
   },
   "devDependencies": {
