--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,14 @@ matrix:
      - os: linux
        dist: trusty
        compiler: clang
+       env: NODE_VERSION="13"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       dist: trusty
+       compiler: clang
        env: NODE_VERSION="12"
        addons:
          apt:
@@ -93,7 +101,10 @@ matrix:
      # OS X
      - os: osx
        compiler: clang
-       env: NODE_VERSION="12" # node abi 67
+       env: NODE_VERSION="13" # node abi 79
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="12" # node abi 72
      - os: osx
        compiler: clang
        env: NODE_VERSION="11" # node abi 67
