--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,10 @@ environment:
       platform: x64
     - nodejs_version: 12
       platform: x86
+    - nodejs_version: 13
+      platform: x64
+    - nodejs_version: 13
+      platform: x86
     # electron
     - nodejs_version: 12
       platform: x64
