--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,7 +89,17 @@ environment:
       NODE_RUNTIME_VERSION: 4.2.0
       TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
     - nodejs_version: 10
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 4.2.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 10
       platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 4.1.0
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 10
+      platform: x86
       NODE_RUNTIME: electron
       NODE_RUNTIME_VERSION: 4.1.0
       TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
