--- a/.travis.yml
+++ b/.travis.yml
@@ -132,6 +132,14 @@ matrix:
      # electron Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="7.1.0"
+       dist: trusty
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="8" ELECTRON_VERSION="7.0.0"
        dist: trusty
        addons:
@@ -231,6 +239,9 @@ matrix:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5']
      # electron MacOs
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="7.1.0"
      - os: osx
        compiler: clang
        env: NODE_VERSION="8" ELECTRON_VERSION="7.0.0"
