--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "binary": {
     "module_name": "node_sqlite3",
-    "module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
+    "module_path": "./lib/binding/napi-v{napi_build_version}-{platform}-{arch}",
     "host": "https://mapbox-node-binary.s3.amazonaws.com",
     "remote_path": "./{name}/v{version}/{toolset}/",
-    "package_name": "{node_abi}-{platform}-{arch}.tar.gz"
+    "package_name": "napi-v{napi_build_version}-{platform}-{arch}.tar.gz",
+    "napi_versions": [
+      3
+    ]
   },
   "contributors": [
     "Konstantin Käfer <mail@kkaefer.com>",
