--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: generic
 
 dist: precise
@@ -62,7 +64,28 @@ matrix:
             packages: [ 'clang-3.5']
      - os: linux
        compiler: clang
+       env: NODE_VERSION="7"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="6"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="5"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="4"
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
@@ -96,30 +119,39 @@ matrix:
        env: NODE_VERSION="8" # node abi 57
      - os: osx
        compiler: clang
+       env: NODE_VERSION="7" # node abi 51
+     - os: osx
+       compiler: clang
        env: NODE_VERSION="6" # node abi 48
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="5" # node abi 47
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="4" # node abi 46
      # electron Linux
      - os: linux
-      compiler: clang
-      env: NODE_VERSION="8" ELECTRON_VERSION="8.2.0"
-      dist: trusty
-      addons:
-        apt:
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.2.0"
+       dist: trusty
+       addons:
+         apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      - os: linux
-      compiler: clang
-      env: NODE_VERSION="8" ELECTRON_VERSION="8.1.0"
-      dist: trusty
-      addons:
-        apt:
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.1.0"
+       dist: trusty
+       addons:
+         apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      - os: linux
-      compiler: clang
-      env: NODE_VERSION="8" ELECTRON_VERSION="8.0.0"
-      dist: trusty
-      addons:
-        apt:
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.0.0"
+       dist: trusty
+       addons:
+         apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      - os: linux
@@ -194,16 +226,52 @@ matrix:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="2.0.1"
+       dist: trusty # needed for libc6 / 'version `GLIBC_2.17` not found' error on precise
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5', 'libc6']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.8.4"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.7.12"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.6.2"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.3.14"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
      # electron MacOs
      - os: osx
-        compiler: clang
-        env: NODE_VERSION="8" ELECTRON_VERSION="8.2.0"
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.2.0"
      - os: osx
-        compiler: clang
-        env: NODE_VERSION="8" ELECTRON_VERSION="8.1.0"
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.1.0"
      - os: osx
-        compiler: clang
-        env: NODE_VERSION="8" ELECTRON_VERSION="8.0.0"
+       compiler: clang
+       env: NODE_VERSION="8" ELECTRON_VERSION="8.0.0"
      - os: osx
        compiler: clang
        env: NODE_VERSION="8" ELECTRON_VERSION="7.1.0"
@@ -231,6 +299,21 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="6" ELECTRON_VERSION="3.0.6"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="2.0.1"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.8.4"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.7.12"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.6.2"
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="1.3.14"
 
 env:
   global:
