--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "nan": "^2.12.1",
-    "node-pre-gyp": "^0.11.0"
+    "node-pre-gyp": "^0.11.0",
+    "node-gyp": "^6.1.0"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
