--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
   },
   "dependencies": {
     "nan": "^2.12.1",
-    "node-pre-gyp": "^0.11.0",
-    "node-gyp": "^6.1.0"
+    "node-pre-gyp": "^0.11.0"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
     "mocha": "^5.2.0"
+  },
+  "peerDependencies": {
+    "node-gyp": "^6.1.0"
+  },
+  "optionalDependencies": {
+    "node-gyp": "^6.1.0"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
