--- a/package.json
+++ b/package.json
@@ -47,10 +47,15 @@
     "mocha": "^5.2.0"
   },
   "peerDependencies": {
-    "node-gyp": "^6.1.0"
+    "node-gyp": "3.x"
+  },
+  "peerDependenciesMeta": {
+    "node-gyp": {
+      "optional": true 
+    }
   },
   "optionalDependencies": {
-    "node-gyp": "^6.1.0"
+    "node-gyp": "3.x"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
